fix posts list